--- a/src/pug/pages/search-room/search-room.pug
+++ b/src/pug/pages/search-room/search-room.pug
@@ -10,18 +10,18 @@ block variables
   -var title= "Подбор номеров"
   -
     var cards = [
-        {luxury: true, number: 888, price: "9 900₽", star: 5, rewiews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg']},
-        {luxury: false, number: 840, price: "9 900₽", star: 4, rewiews: 65, images: ['room-2.jpg', 'room-3.jpg', 'room-2.jpg', 'room-3.jpg']},
-        {luxury: false, number: 980, price: "8 500₽", star: 3, rewiews: 35, images: ['room-3.jpg', 'room-2.jpg', 'room-3.jpg', 'room-2.jpg']},
-        {luxury: false, number: 856, price: "7 300₽", star: 5, rewiews: 19, images: ['room-4.jpg', 'room-3.jpg', 'room-4.jpg', 'room-3.jpg']},
-        {luxury: false, number: 740, price: "6 000₽", star: 4, rewiews: 44, images: ['room-5.jpg', 'room-4.jpg', 'room-5.jpg', 'room-4.jpg']},
-        {luxury: false, number: 982, price: "5 800₽", star: 3, rewiews: 56, images: ['room-6.jpg', 'room-5.jpg', 'room-6.jpg', 'room-5.jpg']},
-        {luxury: false, number: 678, price: "5 500₽", star: 5, rewiews: 45, images: ['room-7.jpg', 'room-6.jpg', 'room-7.jpg', 'room-6.jpg']},
-        {luxury: false, number: 450, price: "5 300₽", star: 4, rewiews: 39, images: ['room-8.jpg', 'room-7.jpg', 'room-8.jpg', 'room-7.jpg']},
-        {luxury: false, number: 350, price: "5 000₽", star: 3, rewiews: 77, images: ['room-9.jpg', 'room-8.jpg', 'room-9.jpg', 'room-8.jpg']},
-        {luxury: false, number: 666, price: "5 000₽", star: 5, rewiews: 25, images: ['room-10.jpg', 'room-9.jpg', 'room-10.jpg', 'room-9.jpg']},
-        {luxury: false, number: 444, price: "5 000₽", star: 3, rewiews: 15, images: ['room-11.jpg', 'room-10.jpg', 'room-11.jpg', 'room-10.jpg']},
-        {luxury: false, number: 352, price: "5 000₽", star: 3, rewiews: 55, images: ['room-12.jpg', 'room-11.jpg', 'room-12.jpg', 'room-11.jpg']}
+        {luxury: true, number: 888, price: "9 900₽", star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg']},
+        {luxury: false, number: 840, price: "9 900₽", star: 4, reviews: 65, images: ['room-2.jpg', 'room-3.jpg', 'room-2.jpg', 'room-3.jpg']},
+        {luxury: false, number: 980, price: "8 500₽", star: 3, reviews: 35, images: ['room-3.jpg', 'room-2.jpg', 'room-3.jpg', 'room-2.jpg']},
+        {luxury: false, number: 856, price: "7 300₽", star: 5, reviews: 19, images: ['room-4.jpg', 'room-3.jpg', 'room-4.jpg', 'room-3.jpg']},
+        {luxury: false, number: 740, price: "6 000₽", star: 4, reviews: 44, images: ['room-5.jpg', 'room-4.jpg', 'room-5.jpg', 'room-4.jpg']},
+        {luxury: false, number: 982, price: "5 800₽", star: 3, reviews: 56, images: ['room-6.jpg', 'room-5.jpg', 'room-6.jpg', 'room-5.jpg']},
+        {luxury: false, number: 678, price: "5 500₽", star: 5, reviews: 45, images: ['room-7.jpg', 'room-6.jpg', 'room-7.jpg', 'room-6.jpg']},
+        {luxury: false, number: 450, price: "5 300₽", star: 4, reviews: 39, images: ['room-8.jpg', 'room-7.jpg', 'room-8.jpg', 'room-7.jpg']},
+        {luxury: false, number: 350, price: "5 000₽", star: 3, reviews: 77, images: ['room-9.jpg', 'room-8.jpg', 'room-9.jpg', 'room-8.jpg']},
+        {luxury: false, number: 666, price: "5 000₽", star: 5, reviews: 25, images: ['room-10.jpg', 'room-9.jpg', 'room-10.jpg', 'room-9.jpg']},
+        {luxury: false, number: 444, price: "5 000₽", star: 3, reviews: 15, images: ['room-11.jpg', 'room-10.jpg', 'room-11.jpg', 'room-10.jpg']},
+        {luxury: false, number: 352, price: "5 000₽", star: 3, reviews: 55, images: ['room-12.jpg', 'room-11.jpg', 'room-12.jpg', 'room-11.jpg']}
       ]
 block content
   .container
