--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -38,8 +38,7 @@ mixin header(login)
                 a(class="user-name" href="/mock-address") Юлий Цезарь
               else
                 .header-buttons
-                  +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти"})
-                  +button({"color": "blue", "tag": "a", "href": "/registration.html", "text": "зарегистрироваться"})
+                  +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти", 'size': 's'})
+                  +button({"color": "blue", "tag": "a", "href": "/registration.html", "text": "зарегистрироваться", 'size': 's'})
           button(class="header__burger")
             span.header__burger-line
-
