--- a/src/pug/pages/headers&footers/headers&footers.scss
+++ b/src/pug/pages/headers&footers/headers&footers.scss
@@ -15,3 +15,9 @@
 .page__wrapper:not(:last-child) {
   margin-bottom: 40px;
 }
+
+.ui-header {
+  margin-bottom: 70px;
+  margin-left: 30px;
+  padding-top: 30px;
+}
