--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    padding: 100px 0px;
+    padding: 50px 0;
     column-gap: 40px;
   }
 
@@ -72,7 +72,7 @@
   margin-right: 20px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: $tableWidth) {
   .footer {
     padding: 120px 0px;
     &__wrapper {
