--- a/src/pug/pages/room-details/room-details.scss
+++ b/src/pug/pages/room-details/room-details.scss
@@ -88,7 +88,7 @@
   &__about-room-container {
     display: grid;
     grid-auto-rows: 1fr;
-    row-gap: 40px;
+    row-gap: 45px;
   }
 
   &__about-room-title {
@@ -99,6 +99,10 @@
     grid-row: 2 / 3;
     grid-column: 1 / 3;
     max-width: 712px;
+
+    .review:not(:last-child) {
+      margin-bottom: 10px;
+    }
 
     @media screen and (max-width: $phoneWidth) {
       grid-row: 3 / 4;
@@ -155,6 +159,7 @@
 
   &__cancel-text {
     @extend %body-text;
+    line-height: $largeLineHeight;
   }
 
   &__rating {
