--- a/src/pug/pages/colors-types/colors&types.scss
+++ b/src/pug/pages/colors-types/colors&types.scss
@@ -75,7 +75,7 @@
   margin-bottom: 50px;
 
   &--size-xl {
-    font-size: $sub-sectionFontSize
+    font-size: $sub-sectionFontSize;
   }
 
   &--size-l {
