--- a/src/pug/pages/sign-in/sign-in.scss
+++ b/src/pug/pages/sign-in/sign-in.scss
@@ -4,7 +4,8 @@
   justify-content: center;
   min-height: 683px;
   padding: 0 20px;
-  background: center 100% / cover no-repeat url('../../../assets/img/backgrounds/registration-bg.jpg');
+  background: center 100% / cover no-repeat
+    url('../../../assets/img/backgrounds/registration-bg.jpg');
 
   &__login-form {
     width: 100%;
