--- a/src/components/chart/chart.pug
+++ b/src/components/chart/chart.pug
@@ -1,5 +1,5 @@
 mixin chart()
-  .chart__wrapper
+  .chart__wrapper.js-chart
     svg(class="chart" width="122" height="122" viewBox="0 0 34 34")
       circle(class="chart__unit" r="15.9" cx="50%" cy="50%")
       circle(class="chart__unit" r="15.9" cx="50%" cy="50%")
