--- a/src/pug/pages/room-details/room-details.scss
+++ b/src/pug/pages/room-details/room-details.scss
@@ -120,10 +120,10 @@
   &__review-count {
     color: $dark-shade-50;
     font-weight: 400;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: $mainFontSize;
+    font-family: $mainFont;
     font-style: normal;
-    line-height: 14px;
+    line-height: $mainLineHeight;
     text-align: center;
   }
 
