--- a/src/components/subscription-field/subscription-field.pug
+++ b/src/components/subscription-field/subscription-field.pug
@@ -5,4 +5,4 @@ mixin subscription-field(label, placeholder)
     .subscription-field  
       input(class="subscription-field__input" type="email" placeholder=placeholder autofocus=attributes.autofocus)
       button(class="subscription-field__button")
-        img(src="/assets/img/icons/arrow-purple.svg", alt="")
+        img(src=require("/src/assets/img/icons/arrow-purple.svg"), alt="")
