delete eztra container

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,7 +3,7 @@ include /components/subscription-field/subscription-field
 mixin footer()
   footer.footer
     .container__wrapper
-      .container
+      .footer__container
         .footer__wrapper
           .footer__column.footer__column1
             .footer__logo
@@ -47,7 +47,7 @@ mixin footer()
             p(class="footer__subscribe") Получайте специальные предложения и новости сервиса
             +subscription-field('', 'Email')
     .copyright
-      .container
+      .footer__container
         .copyright__wrapper
           p.copyright__text
             |Copyright © 2018 Toxin отель. Все права зачищены.
