--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -2,7 +2,7 @@ include /components/logo/logo
 include /components/button/button
 mixin header(login)
   header.header
-    .container
+    .header__container
       .header__wrapper
         .header__logo
           +logo('text')
