--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,10 +2,16 @@
   background-color: #fff;
   border-top: 1px solid #b3b3bc;
 
+  &__container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    padding: 50px 0;
+    padding: 100px 0;
     column-gap: 40px;
   }
 
