--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,6 +3,11 @@
   background: #fff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
+  &__container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
   &__wrapper {
     display: flex;
     align-items: center;
