--- a/src/pug/pages/room-details/room-details.pug
+++ b/src/pug/pages/room-details/room-details.pug
@@ -20,7 +20,7 @@ block content
         img(src=require("/src/assets/img/room-details-picture/image-2.jpg"), alt="room picture")
       .room-details__picture
         img(src=require("/src/assets/img/room-details-picture/image-3.jpg"), alt="room picture")
-    .container
+    .room-details__container
       .room-details__info
         .room-details__about-room
           .room-details__about-room-title
