--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -6,6 +6,8 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="keywords", content="отель номер забронировать")
+    meta(name="description", content="самый лучший в мире отель toxin")
     title= title
   body
     block header
