--- a/src/components/input-text/input-text.pug
+++ b/src/components/input-text/input-text.pug
@@ -1,4 +1,4 @@
-mixin input-text(label, placeholder, mask)
+mixin input-text({label, placeholder, mask, type = 'text'})
   .text-field
     if label
       .text-field__title
@@ -6,4 +6,4 @@ mixin input-text(label, placeholder, mask)
     if mask
       input(class=`text-field__input js-text-field__input` type="text" placeholder=placeholder autofocus=attributes.autofocus)
     else
-      input(class="text-field__input" type="text" placeholder=placeholder autofocus=attributes.autofocus)
+      input(class="text-field__input" type=type placeholder=placeholder autofocus=attributes.autofocus)
