--- a/src/pug/pages/cards/cards.scss
+++ b/src/pug/pages/cards/cards.scss
@@ -2,6 +2,9 @@
   &__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1160px;
+    margin: 0 auto;
+    padding: 0 20px;
     column-gap: 40px;
   }
 
