--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -26,6 +26,9 @@
 
 .checkbox-list {
   position: absolute;
+  right: 0;
+  left: 0;
+  z-index: 5;
   display: flex;
   flex-direction: column;
   background-color: #fff;
