--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -129,7 +129,7 @@
   }
 
   &__price-per-day-text,
-  &__rewiews-text {
+  &__reviews-text {
     color: $dark-shade-50;
     font-weight: $mainFontWeight;
     font-size: $mainFontSize;
