--- a/src/pug/pages/room-details/room-details.scss
+++ b/src/pug/pages/room-details/room-details.scss
@@ -116,7 +116,7 @@
     }
   }
 
-  &__reveiw-title {
+  &__review-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
