--- a/src/pug/pages/search-room/search-room.pug
+++ b/src/pug/pages/search-room/search-room.pug
@@ -29,7 +29,7 @@ block content
       .search-room__date-filter
         +date-dropdown('даты пребывания в отеле')
       .search-room__guest
-        +dropdown({label: 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Cколько гостей'})
+        +dropdown({label: 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Сколько гостей'})
       .search-room__range-slider
         +range-slider('диапазон цены', 'Стоимость за сутки пребывания в номере')
       .search-room__checkbox
