--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,17 +1,17 @@
 include /components/logo/logo
 include /components/button/button
 mixin header(login)
-  header.header
+  header.header.js-header
     .header__container
       .header__wrapper
         .header__logo
           +logo('text')
         nav.header__navigation
-          ul.header__navigation-list
+          ul.header__navigation-list.js-header__navigation-list
             li.header__navigation-item
               a(class="header__navigation-link" href="/mock-address") О нас
             li.header__navigation-item
-              div(class="header__navigation-link header__navigation-link--expand") Услуги
+              div(class="header__navigation-link header__navigation-link--expand js-header__navigation-link--expand") Услуги
               ul.header__navigation-dropdown
                 li
                   a(class="header__navigation-link" href="/mock-address") Услуга 1
@@ -26,7 +26,7 @@ mixin header(login)
             li.header__navigation-item
               a(class="header__navigation-link" href="/mock-address") Новости
             li.header__navigation-item
-              div(class="header__navigation-link header__navigation-link--expand") Соглашения
+              div(class="header__navigation-link header__navigation-link--expand js-header__navigation-link--expand") Соглашения
               ul.header__navigation-dropdown
                 li
                   a(class="header__navigation-link" href="/mock-address") Соглашение 1
@@ -39,5 +39,5 @@ mixin header(login)
                 .header-buttons
                   +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти", 'size': 's'})
                   +button({"color": "blue", "tag": "a", "href": "/registration.html", "text": "зарегистрироваться", 'size': 's'})
-          button(class="header__burger")
+          button(class="header__burger js-header__burger")
             span.header__burger-line
