--- a/src/components/room-card/room-card.pug
+++ b/src/components/room-card/room-card.pug
@@ -5,16 +5,16 @@ mixin room-card(obj)
     .room-card__slider
       .room-card__slider-slides
         each img in images
-          img(class="room-card__slider-slide" src=require(`/src/assets/img/rooms-photo/${img}`), alt="room picture")
-      .room-card__slider-dots
-        .room-card__slider-dot
-        .room-card__slider-dot
-        .room-card__slider-dot
-        .room-card__slider-dot
+          img(class="room-card__slider-slide js-room-card__slider-slide" src=require(`/src/assets/img/rooms-photo/${img}`), alt="room picture")
+      .room-card__slider-dots.js-room-card__slider-dots
+        .room-card__slider-dot.js-room-card__slider-dot
+        .room-card__slider-dot.js-room-card__slider-dot
+        .room-card__slider-dot.js-room-card__slider-dot
+        .room-card__slider-dot.js-room-card__slider-dot
       .room-card__slider-buttons
-        button.room-card__slider-button.room-card__slider-button--left
+        button.room-card__slider-button.room-card__slider-button--left.js-room-card__slider-button--left
           img(src=require("/src/assets/img/icons/next-slide.svg"), alt="button-left")
-        button.room-card__slider-button.room-card__slider-button--right
+        button.room-card__slider-button.room-card__slider-button--right.js-room-card__slider-button--right
           img(src=require("/src/assets/img/icons/next-slide.svg"), alt="button-right")
     .room-card__inner
       .room-card__info
@@ -25,9 +25,9 @@ mixin room-card(obj)
             span.room-card__luxury-text &nbsp люкс
         .room-card__price-per-day
           span=  price
-          span.room-card__price-per-day-text &nbsp в сутки
+          span.room-card__price-per-day-text в сутки
       .room-card__rating
         +rate-button(star)
         a(class="room-card__reviews" href="/room-details.html")
           span= reviews
-          span.room-card__rewiews-text &nbsp Отзывов
+          span.room-card__reviews-text &nbsp Отзывов
