--- a/src/pug/pages/cards/cards.pug
+++ b/src/pug/pages/cards/cards.pug
@@ -26,6 +26,6 @@ block content
             +login-form()
         .cards__column
           .cards__item
-            +room-card({luxury: true, number: 888, price: "9 900₽", star: 5, rewiews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
+            +room-card({luxury: true, number: 888, price: "9 900₽", star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
           .cards__item
-            +room-card({luxury: false, number: 840, price: "9 900₽", star: 4, rewiews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]})
+            +room-card({luxury: false, number: 840, price: "9 900₽", star: 4, reviews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]})
