--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -17,7 +17,7 @@ include /components/date-dropdown/date-dropdown
 include /components/button/button
   include /components/logo/logo
 block variables
-  -var title= "Form Flements"
+  -var title= "Form Elements"
   -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
 block content
   .content--form-elements
@@ -33,7 +33,7 @@ block content
           .text-field__wrapper
             +subscription-field('text-field', 'Email')(autofocus)
         .text-field__wrapper
-          +dropdown({label : 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Cколько гостей'})
+          +dropdown({label : 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Сколько гостей'})
         .text-field__wrapper
           +dropdown({label: 'удобства номера', items: ['спальни', 'кровати', 'ванные комнаты'], type: 'js-comfort', holder: 'Удобства'})
         .text-field__wrapper
