add default values

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,10 @@
 @import 'utils/fonts';
 
 html {
+  color: $dark-shade-100;
   font-size: 100%;
+  font-family: $mainFont;
+  background-color: $background-color;
 }
 
 @media (max-width: $phoneWidth) {
