--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -28,3 +28,4 @@ $dark-shade-5: rgba(31, 32, 65, 0.05);
 $purple-color: #bc9cff;
 $green-color: #6fcf97;
 $button-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$background-color: #ffffff;
