change font size

--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -47,6 +47,7 @@
   &__price-per-day {
     align-self: end;
     color: $dark-shade-50;
+    font-size: $mainFontSize;
     @extend %label-text;
   }
 
