change modificator prefix

--- a/src/components/about-room/about-room.pug
+++ b/src/components/about-room/about-room.pug
@@ -1,5 +1,5 @@
 mixin about-room(src, title, text)
-  .about-room__item
+  .about-room
     img(class="about-room__img" src=src, alt="icon")
     span.about-room__title
       =title
