--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,8 +1,8 @@
 mixin pagination()
   .pagination
     ul.pagination__list
-      li(class="pagination__item pagination__item--active") 
-        a(class="pagination__link pagination__link--active" href="/page1") 1
+      li(class="pagination__item pagination__item_active")
+        a(class="pagination__link pagination__link_active" href="/page1") 1
       li(class="pagination__item") 
         a(class="pagination__link" href="/page2") 2
       li(class="pagination__item") 
