--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -8,7 +8,7 @@ mixin review(obj)
     span.review__time
       =time
     if liked
-      +button-like(likes)(class="button-like--active")
+      +button-like(likes)(class="button-like_active")
     else
       +button-like(likes)
     p.review__comment
