--- a/src/pug/pages/cards/cards.pug
+++ b/src/pug/pages/cards/cards.pug
@@ -9,7 +9,7 @@ block variables
   -var title= "Cards"
 
 block content
-  .content--card
+  .content_card
     header.ui-header
       +logo()
     .container
