--- a/src/pug/pages/colors-types/colors-types.pug
+++ b/src/pug/pages/colors-types/colors-types.pug
@@ -3,7 +3,7 @@ include /components/logo/logo
 block variables
   -var title= "Colors & Types"
 block content
-  .content--colors-type
+  .content_colors-type
     header.ui-header
       +logo()
     .container
@@ -45,22 +45,22 @@ block content
               p Green
               p #6FCF97
         .types
-          .type__wrapper.type__wrapper--size-xl
+          .type__wrapper.type__wrapper_size-xl
             p.tag
               |H1
             p.font.sub-section-title
               |This one is the sub-section or widget title
-          .type__wrapper.type__wrapper--size-l
+          .type__wrapper.type__wrapper_size-l
             p.tag
               |H2
             p.font.item-title
               |Next one is the item title inside widgets
-          .type__wrapper.type__wrapper--size-s
+          .type__wrapper.type__wrapper_size-s
             p.tag
               |H3
             p.font.label-text
               |This is a label or CTA text
-          .type__wrapper.type__wrapper--size-m
+          .type__wrapper.type__wrapper_size-m
             p.tag
               |Body
             p(class="font body-text")
