--- a/src/pug/pages/headers&footers/headers&footers.pug
+++ b/src/pug/pages/headers&footers/headers&footers.pug
@@ -5,7 +5,7 @@ include /components/logo/logo
 block variables
   -var title = "headers&footers"
 block content
-  .content--headers-footers
+  .content_headers-footers
     header.ui-header
       +logo()
     .page__wrapper
