--- a/src/components/button-like/button-like.scss
+++ b/src/components/button-like/button-like.scss
@@ -11,7 +11,7 @@
   border-radius: 10px;
   cursor: pointer;
 
-  &--active {
+  &_active {
     color: $purple-color;
     background: url('/src/assets/img/icons/like-active.svg') 15% 50% no-repeat;
     border-color: $purple-color;
