--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -40,7 +40,7 @@
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
 
-    &--active {
+    &_active {
       position: absolute;
       right: 0;
       left: 0;
@@ -82,11 +82,11 @@
       border-radius: 50%;
       cursor: pointer;
 
-      &--minus {
+      &_minus {
         background: url('/src/assets/img/icons/minus.svg'), transparent;
       }
 
-      &--plus {
+      &_plus {
         background: url('/src/assets/img/icons/plus.svg'), transparent;
       }
 
