--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -33,7 +33,7 @@
       opacity: 0;
       transition: all 0.3s ease-in-out;
 
-      &--active {
+      &_active {
         visibility: visible;
         opacity: 1;
       }
@@ -63,11 +63,11 @@
       font-size: 18px;
     }
 
-    &--expand {
+    &_expand {
       padding-right: 17px;
     }
 
-    &--expand::after {
+    &_expand::after {
       position: absolute;
       top: 2px;
       right: 0;
@@ -93,7 +93,7 @@
     border-bottom-left-radius: 10px;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
-    &--active {
+    &_active {
       position: absolute;
       left: 50%;
       z-index: 2;
@@ -176,7 +176,7 @@
     }
   }
 
-  &__burger--active {
+  &__burger_active {
     .header__burger-line {
       left: 4px;
       transform: rotate(-45deg);
