--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -15,7 +15,7 @@
     color: $dark-shade-50;
     font-weight: $mainFontWeight;
 
-    &--active {
+    &_active {
       color: #ffffff;
       font-weight: $boldFontWeight;
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
