--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -20,7 +20,7 @@ block variables
   -var title= "Form Elements"
   -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
 block content
-  .content--form-elements
+  .content_form-elements
     header.ui-header
       +logo()
     .form-elements
@@ -65,7 +65,7 @@ block content
           h3.form-elements__title like button
           .form-elements__button-like
             +button-like(2)(class="button-like__inner")
-            +button-like(12)(class="button-like--active")
+            +button-like(12)(class="button-like_active")
         .form-elements__inner
           h3.form-elements__title Rate button
           .form-elements__rate
